--- a/BarBot/BarBot.UWP/UserControls/AppBar/Settings/PasswordContentDialog.xaml
+++ b/BarBot/BarBot.UWP/UserControls/AppBar/Settings/PasswordContentDialog.xaml
@@ -10,42 +10,35 @@
     IsPrimaryButtonEnabled="True"
     PrimaryButtonText="Login"
     CloseButtonText="Cancel"
-    PrimaryButtonClick="PasswordDialog_PrimaryButtonClick"
-    MaxWidth="1280"
-    Background="#161616"
-    Foreground="White"
-    BorderBrush="#222222"
-    FontFamily="Microsoft Yi Baiti">
+    PrimaryButtonClick="PasswordDialog_PrimaryButtonClick">
+    
     <ContentDialog.Resources>
-        <Style TargetType="Button" x:Key="ButtonStyle">
-            <Setter Property="FontSize"
-                    Value="38" />
-            <Setter Property="FontFamily"
-                        Value="Microsoft Yi Baiti" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ms-appx:///Styles/ContentDialogStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </ContentDialog.Resources>
+    
     <ContentDialog.Style>
         <Style TargetType="ContentDialog">
             <Setter Property="PrimaryButtonStyle" Value="{StaticResource ButtonStyle}" />
-            <Setter Property="CloseButtonStyle" Value="{StaticResource ButtonStyle}" />
+            <Setter Property="CloseButtonStyle" Value="{StaticResource CloseButtonStyle}" />
+            <Setter Property="Width" Value="900" />
+            <Setter Property="MaxWidth" Value="1280" />
+            <Setter Property="Background" Value="#161616" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="BorderBrush" Value="#222222" />
+            <Setter Property="FontFamily" Value="Microsoft Yi Baiti" />
         </Style>
     </ContentDialog.Style>
+    
     <StackPanel>
         <PasswordBox x:Name="PasswordBox"
                  PlaceholderText="Password"
                  Header="Please Log in:"
-                 Width="750"
-                 PasswordRevealMode="Hidden"
-                 VerticalAlignment="Center"
-                 HorizontalAlignment="Center"
-                 FontSize="45"
-                 FontFamily="Microsoft Yi Baiti"
-                 MaxLength="25" />
+                 Style="{StaticResource PasswordBoxStyle}" />
         <TextBlock x:Name="ErrorTextBlock"
-                   HorizontalAlignment="Left" 
-                   FontSize="32"
-                   FontFamily="Microsoft Yi Baiti"
-                   Foreground="Red"
-                   Visibility="Collapsed" />
+                   Style="{StaticResource ErrorTextBlockStyle}" />
     </StackPanel>
 </ContentDialog>
