--- a/BarBot/BarBot.UWP/UserControls/AppBar/Search/SearchContentDialog.xaml
+++ b/BarBot/BarBot.UWP/UserControls/AppBar/Search/SearchContentDialog.xaml
@@ -10,43 +10,31 @@
     IsPrimaryButtonEnabled="True"
     PrimaryButtonText="Search"
     CloseButtonText="Cancel"
-    PrimaryButtonClick="SearchDialog_PrimaryButtonClick"
-    MaxWidth="1280"
-    Background="#161616"
-    Foreground="White"
-    BorderBrush="#222222"
-    FontFamily="Microsoft Yi Baiti">
+    PrimaryButtonClick="SearchDialog_PrimaryButtonClick">
+
     <ContentDialog.Resources>
-        <Style TargetType="Button" x:Key="ButtonStyle">
-            <Setter Property="FontSize"
-                    Value="38" />
-            <Setter Property="FontFamily"
-                        Value="Microsoft Yi Baiti" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ms-appx:///Styles/ContentDialogStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </ContentDialog.Resources>
+    
     <ContentDialog.Style>
         <Style TargetType="ContentDialog">
             <Setter Property="PrimaryButtonStyle" Value="{StaticResource ButtonStyle}" />
-            <Setter Property="CloseButtonStyle" Value="{StaticResource ButtonStyle}" />
+            <Setter Property="CloseButtonStyle" Value="{StaticResource CloseButtonStyle}" />
+            <Setter Property="Width" Value="900" />
+            <Setter Property="MaxWidth" Value="1280" />
+            <Setter Property="Background" Value="#161616" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="BorderBrush" Value="#222222" />
+            <Setter Property="FontFamily" Value="Microsoft Yi Baiti" />
         </Style>
     </ContentDialog.Style>
-    
+
     <AutoSuggestBox
                 x:Name="SearchAutoSuggestBox"
                 PlaceholderText="Search Cocktails"
-                Width="750">
-        <AutoSuggestBox.Resources>
-            <Style TargetType="TextBox" x:Key="AutoSuggestBoxTextBoxStyle">
-                <Setter Property="FontSize"
-                        Value="45" />
-                <Setter Property="FontFamily"
-                        Value="Microsoft Yi Baiti" />
-            </Style>
-        </AutoSuggestBox.Resources>
-        <AutoSuggestBox.Style>
-            <Style TargetType="AutoSuggestBox">
-                <Setter Property="TextBoxStyle" Value="{StaticResource AutoSuggestBoxTextBoxStyle}" />
-            </Style>
-        </AutoSuggestBox.Style>
-    </AutoSuggestBox>
+                Style="{StaticResource AutoSuggestBoxStyle}" />
 </ContentDialog>
