--- a/BarBot/BarBot.UWP/UserControls/ContainerPanel/ContainerLoadContentDialog.xaml
+++ b/BarBot/BarBot.UWP/UserControls/ContainerPanel/ContainerLoadContentDialog.xaml
@@ -9,33 +9,30 @@
     x:Name="ContentDialog"
     PrimaryButtonText="Done"
     CloseButtonText="Cancel"
-    PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
-    Width="900"
-    MaxWidth="1280"
-    Background="#161616"
-    Foreground="White"
-    BorderBrush="#222222"
-    FontFamily="Microsoft Yi Baiti">
+    PrimaryButtonClick="ContentDialog_PrimaryButtonClick">
+    
     <ContentDialog.Resources>
-        <Style TargetType="Button" x:Key="ButtonStyle">
-            <Setter Property="FontSize"
-                    Value="38" />
-            <Setter Property="FontFamily"
-                        Value="Microsoft Yi Baiti" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ms-appx:///Styles/ContentDialogStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </ContentDialog.Resources>
+
     <ContentDialog.Style>
         <Style TargetType="ContentDialog">
             <Setter Property="PrimaryButtonStyle" Value="{StaticResource ButtonStyle}" />
-            <Setter Property="CloseButtonStyle" Value="{StaticResource ButtonStyle}" />
+            <Setter Property="CloseButtonStyle" Value="{StaticResource CloseButtonStyle}" />
+            <Setter Property="Width" Value="900" />
+            <Setter Property="MaxWidth" Value="1280" />
+            <Setter Property="Background" Value="#161616" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="BorderBrush" Value="#222222" />
+            <Setter Property="FontFamily" Value="Microsoft Yi Baiti" />
         </Style>
     </ContentDialog.Style>
+    
     <TextBlock x:Name="TextBlock"
-               HorizontalAlignment="Center"
-               TextAlignment="Center" 
-               FontSize="45"
-               FontFamily="Microsoft Yi Baiti"
-               Foreground="White"
                Text="{Binding Path=Text}"
-               Width="auto" />
+               Style="{StaticResource TextBlockStyle}" />
 </ContentDialog>
