--- a/BarBot/BarBot.UWP/UserControls/RecipeDetail/Dialogs/CupContentDialog.xaml
+++ b/BarBot/BarBot.UWP/UserControls/RecipeDetail/Dialogs/CupContentDialog.xaml
@@ -7,41 +7,38 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     x:Name="ContentDialog"
-    MaxWidth="1280"
-    Background="#161616"
-    Foreground="White"
-    BorderBrush="#222222"
-    FontFamily="Microsoft Yi Baiti"
     IsPrimaryButtonEnabled="true"
     IsSecondaryButtonEnabled="true"
     PrimaryButtonText="Ok"
     SecondaryButtonText="Reset"
+    CloseButtonText="Cancel"
     PrimaryButtonClick="CupDialog_PrimaryButtonClick"
-    SecondaryButtonClick="CupDialog_SecondaryButtonClick">
+    SecondaryButtonClick="CupDialog_SecondaryButtonClick"
+    CloseButtonClick="ContentDialog_CloseButtonClick">
+
     <ContentDialog.Resources>
-        <Style TargetType="Button" x:Key="ButtonStyle">
-            <Setter Property="FontSize"
-                    Value="38" />
-            <Setter Property="FontFamily"
-                        Value="Microsoft Yi Baiti" />
-        </Style>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ms-appx:///Styles/ContentDialogStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </ContentDialog.Resources>
+    
     <ContentDialog.Style>
         <Style TargetType="ContentDialog">
             <Setter Property="PrimaryButtonStyle" Value="{StaticResource ButtonStyle}" />
             <Setter Property="SecondaryButtonStyle" Value="{StaticResource ButtonStyle}" />
-            <Setter Property="CloseButtonStyle" Value="{StaticResource ButtonStyle}" />
+            <Setter Property="CloseButtonStyle" Value="{StaticResource CloseButtonStyle}" />
+            <Setter Property="MaxWidth" Value="1280" />
+            <Setter Property="Background" Value="#161616" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="BorderBrush" Value="#222222" />
+            <Setter Property="FontFamily" Value="Microsoft Yi Baiti" />
         </Style>
     </ContentDialog.Style>
 
     <TextBlock x:Name="TextBlock"
-               VerticalAlignment="Center"
-               HorizontalAlignment="Center"
-               TextAlignment="Center" 
-               TextWrapping="WrapWholeWords"
-               FontSize="45"
-               FontFamily="Microsoft Yi Baiti"
-               Foreground="White"
                Text="There are no cups left! Please place a cup or reset the cup dispenser."
-               Width="1000" />
+               Width="1000"
+               Style="{StaticResource TextBlockStyle}" />
 </ContentDialog>
